[PL-24] - Add get profile endpoint
